# satel_integra

./: .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml  requirements_tests.txt
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml  release-drafter.yml  release.yml
satel_integra/: __init__.py  command.py  connection.py  const.py  handler_registry.py  message.py  satel_integra.py  state.py  transport.py  utils.py
satel_integra/handlers/: __init__.py  outputs.py  partitions.py  registry.py  result.py  zones.py
satel_integra_ext/: satel_integra.py
tests/: conftest.py  test_connection.py  test_handlers.py  test_satel_integra.py  test_transport.py  test_utils.py
