[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=77.0"]

[project]
name = "satel-integra"
version = "0.0.0"
description = "Communication library for Satel Integra alarm system (via TCP/IP protocol)"
readme = "README.rst"
keywords = ["satel", "integra", "alarm", "security"]
authors = [
  { name = "Krzysztof Machelski", email = "krzysztof.machelski+pypi@gmail.com" },
  { name = "Tom Matheussen", email = "13683094+Tommatheussen@users.noreply.github.com" }
]
license-files = ["LICENSE"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Topic :: Security",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
]
requires-python = ">=3.13"
dependencies = []

[tool.pytest.ini_options]

[tool.ruff.lint]
select = ["ALL"]

ignore = [
    "ERA001", # Skip for now, TODO: Remove this ignore when we have fixed all issues
    "TD002", # Skip for now, TODO: Remove this ignore when we have fixed all issues
    "TD003", # Skip for now, TODO: Remove this ignore when we have fixed all issues
    "FIX002", # Skip for now, TODO: Remove this ignore when we have fixed all issues

    "ANN401", # Opinioated warning on disallowing dynamically typed expressions
    "D203",   # Conflicts with other rules
    "D213",   # Conflicts with other rules
    "EM101",  # raw-string-in-exception

    "D105", # Missing docstring in magic method
    "D107", # Missing docstring in `__init__`

    "FBT", # flake8-boolean-trap

    "PLR2004", # Magic value used in comparison, consider replacing {value} with a constant variable

    # Conflicts with the Ruff formatter
    "COM812",

    "TRY003", # raise-vanilla-args: Avoid specifying long messages outside the exception class
    "T201", # print found,
    "D401", # First line of docstring should be in imperative mood

]

[tool.ruff.lint.per-file-ignores]
"tests/**" = [
    "D100",    # Missing docstring in public module
    "D103",    # Missing docstring in public function
    "D104",    # Missing docstring in public package
    "S101",    # Use of assert detected
]
